# tusk

./: .gitignore  README.md
build_scripts/: build-tsk-mingw.sh  build-zlib-mingw.sh
lnx/: CMakeLists.txt  CMakePresets.json  LIBTUSK_API.md  generate.sh  libtusk.cpp  tusk.cpp
lnx/cmake/: zig-ranlib.sh  zig-toolchain.cmake
lnx/include/: libtusk.h
win/: CMakeLists.txt  CMakePresets.json  generate.ps1  libtusk.cpp  libtusk.map  test_libtusk.c  tusk.cpp
win/include/: libtusk.h
win/include/msvc_compat/: inttypes.h
win/lib/: zlib.lib
